CSS filtered and unnesseary removed Add Color Red (Error) to style.css

--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -11,40 +11,35 @@
 </head>
 
 <body>
-    <header class="header content-wrapper">
-        <div class="header__logo-and-signup">
-            <img src="../assets/img/logo-black.png" alt="the word: join with a big J with a blue dot on the left side,"
-                class="header__joinlogo">
-        </div>
-        </div>
+    <header class="content-wrapper header">
+            <img class="header__joinlogo" src="../assets/img/logo-black.png"
+                alt="the word: join with a big J with a blue dot on the left side,">
     </header>
 
     <main class="content-wrapper">
         <form class="useraccess-form">
             <img class="useraccess-form__arrowicon" src="../assets/img/arrow-left-blue.svg"
                 alt="blue arrow that points to the left" onclick="location.href='../index.html'">
-            <div class="useraccess-form__heading">
+            <div class="useraccess-form__header">
                 <h1>Sign up</h1>
-                <div class="useraccess-form__heading__bluestrip"></div>
+                <div class="useraccess-form__header__bluestrip"></div>
             </div>
             <div class="useraccess-form__inputfields">
                 <div class="useraccess-form__inputfield__wrapper">
-                    <input class="useraccess-form__inputfield__input" id="name" type="text" placeholder="Name">
+                    <input id="name" type="text" placeholder="Name">
                     <img class="useraccess-form__inputfields__icon" src="../assets/img/person.svg"
                         alt="icon of an person">
                 </div>
                 <div class="useraccess-form__inputfield__wrapper">
-                    <input class="useraccess-form__inputfield__input" id="email" type="email" placeholder="Email">
+                    <input id="email" type="email" placeholder="Email">
                     <img class="useraccess-form__inputfields__icon" src="../assets/img/mail.svg" alt="icon of an email">
                 </div>
                 <div class="useraccess-form__inputfield__wrapper">
-                    <input class="useraccess-form__inputfield__input" id="password" type="password"
-                        placeholder="Password">
+                    <input id="password" type="password" placeholder="Password">
                     <img class="useraccess-form__inputfields__icon" src="../assets/img/lock.svg" alt="icon of a lock">
                 </div>
                 <div class="useraccess-form__inputfield__wrapper">
-                    <input class="useraccess-form__inputfield__input" id="confirm-password" type="password"
-                        placeholder="Confirm Password">
+                    <input id="confirm-password" type="password" placeholder="Confirm Password">
                     <img class="useraccess-form__inputfields__icon" src="../assets/img/lock.svg" alt="icon of a lock">
                 </div>
                 <p class="useraccess-form__privacy-policy">
@@ -61,7 +56,7 @@
         </form>
     </main>
 
-    <footer class="footer content-wrapper">
+    <footer class="content-wrapper">
         <div class="footer__privacy-legal-box">
             <a href="/pages/privacy-policy.html" class="footer__privacy-legal-box__links">Privacy Policy</a>
             <a href="/pages/legal-notice.html" class="footer__privacy-legal-box__links">Legal notice</a>
