--- a/index.html
+++ b/index.html
@@ -11,31 +11,29 @@
 </head>
 
 <body>
-    <header class="header content-wrapper">
-        <div class="header__logo-and-signup">
-            <img src="/assets/img/logo-black.png" alt="the word: join with a big J with a blue dot on the left side,"
-                class="header__joinlogo">
-            <div class="header__signup">
-                <span class="header__signup__message">Not a Join user?</span>
-                <button class="btn header__signup__signupBtn" onclick="location.href='/pages/sign-up.html'">Sign up</button>
-            </div>
+    <header class="content-wrapper header">
+        <img class="header__joinlogo" src="/assets/img/logo-black.png"
+            alt="the word: join with a big J with a blue dot on the left side,">
+        <div class="header__signup">
+            <span class="header__signup__message">Not a Join user?</span>
+            <button class="btn header__signup__signupBtn" onclick="location.href='/pages/sign-up.html'">Sign
+                up</button>
         </div>
     </header>
 
     <main class="content-wrapper">
         <form class="useraccess-form">
-            <div class="useraccess-form__heading">
+            <div class="useraccess-form__header">
                 <h1>Log in</h1>
-                <div class="useraccess-form__heading__bluestrip"></div>
+                <div class="useraccess-form__header__bluestrip"></div>
             </div>
             <div class="useraccess-form__inputfields">
                 <div class="useraccess-form__inputfield__wrapper">
-                    <input class="useraccess-form__inputfield__input" id="email" type="email" placeholder="Email">
+                    <input id="email" type="email" placeholder="Email">
                     <img class="useraccess-form__inputfields__icon" src="/assets/img/mail.svg" alt="icon of an email">
                 </div>
                 <div class="useraccess-form__inputfield__wrapper">
-                    <input class="useraccess-form__inputfield__input" id="password" type="password"
-                        placeholder="Password">
+                    <input id="password" type="password" placeholder="Password">
                     <img class="useraccess-form__inputfields__icon" src="/assets/img/lock.svg" alt="icon of a lock">
                 </div>
             </div>
@@ -46,7 +44,7 @@
         </form>
     </main>
 
-    <footer class="footer content-wrapper">
+    <footer class="content-wrapper">
         <div class="footer__privacy-legal-box">
             <a href="/pages/privacy-policy.html" class="footer__privacy-legal-box__links">Privacy Policy</a>
             <a href="/pages/legal-notice.html" class="footer__privacy-legal-box__links">Legal notice</a>
