change navbar structur and css styling navbar

--- a/pages/summary.html
+++ b/pages/summary.html
@@ -28,7 +28,7 @@
         <nav id="nav-menu">
             <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
 
-            <div class="nav-menu__all-buttons-container">
+            
                 <div class="nav-menu__buttons-container">
                     <a class="nav-button-hover" href="summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
                     <a href="add_task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
@@ -38,7 +38,7 @@
                 <div class="nav-menu-bottom-button">
                     <a href="privacy_policy.html">Privacy Policy</a>
                     <a href="legal_notice.html">Legal notice</a>
-                </div>
+                
             </div>
         </nav>
 
@@ -77,7 +77,7 @@
                                 <img src="/assets/img/done.png" alt="To-do Image">
                                 <div class="summary-content__metrics__row__box__text">
                                     <span class="metric-number">1</span>
-                                    <span>To-do</span>
+                                    <span>Done</span>
                                 </div>
                             </div>
 
