--- a/pages/summary.html
+++ b/pages/summary.html
@@ -31,7 +31,7 @@
             <div class="nav-menu__all-buttons-container">
                 <div class="nav-menu__buttons-container">
                     <a class="nav-button-hover" href="summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
-                    <a href="add_task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
+                    <a href="add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
                     <a href="board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
                     <a href="contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
                 </div>
