add header user img and hover effects. Change size in summary-content frist line

--- a/pages/summary.html
+++ b/pages/summary.html
@@ -45,7 +45,10 @@
                     <span id="page-title">Kanban Project Management Tool</span>
                     <div id="info-container">
                         <img id="help-img" src="../assets/img/help.svg" alt="Help auestion mark">
-                        <img src="#" alt="User picture">
+                        <div class="header__content__user-info">
+                            <img src="../assets/img/user-ellipse.svg" alt="User picture">
+                            <span>SM</span>
+                        </div>
                     </div>
                 </div>
             </header>
@@ -62,7 +65,7 @@
                     <div class="summary-content__left">
                         <div class="summary-content__metrics__row">
 
-                            <div class="summary-content__metrics__row__box">
+                            <div class="summary-content__metrics__row__box summary-content__metrics__row__box__top">
                                 <img src="/assets/img/to-do.svg" alt="To-do Image">
                                 <div class="summary-content__metrics__row__box__text">
                                     <span class="metric-number">1</span>
@@ -70,7 +73,7 @@
                                 </div>
                             </div>
 
-                            <div class="summary-content__metrics__row__box">
+                            <div class="summary-content__metrics__row__box summary-content__metrics__row__box__top">
                                 <img src="/assets/img/done.png" alt="To-do Image">
                                 <div class="summary-content__metrics__row__box__text">
                                     <span class="metric-number">1</span>
