--- a/pages/summary.html
+++ b/pages/summary.html
@@ -69,7 +69,7 @@
                                 <img src="/assets/img/to-do.svg" alt="To-do Image">
                                 <div class="summary-content__metrics__row__box__text">
                                     <span class="metric-number">1</span>
-                                    <span>To-do</span>
+                                    <span class="metric-txt">To-do</span>
                                 </div>
                             </div>
 
@@ -77,7 +77,7 @@
                                 <img src="/assets/img/done.png" alt="To-do Image">
                                 <div class="summary-content__metrics__row__box__text">
                                     <span class="metric-number">1</span>
-                                    <span>Done</span>
+                                    <span class="metric-txt">Done</span>
                                 </div>
                             </div>
 
@@ -90,7 +90,7 @@
                                     <img src="/assets/img/urgent-summary.png" alt="To-do Image">
                                     <div class="summary-content__metrics__row__box__text">
                                         <span class="metric-number">1</span>
-                                        <span>Urgent</span>
+                                        <span class="metric-txt-middle">Urgent</span>
                                     </div>
                                 </div>
                                 <div class="grey_seperator"></div>
@@ -105,19 +105,19 @@
                             <div class="summary-content__metrics__row__box summary-content__metrics__row__box__bottom">
                                 <div class="summary-content__metrics__row__box__text">
                                     <span class="metric-number">1</span>
-                                    <span>Tasks In <br>Board</span>
+                                    <span class="metric-txt">Tasks In <br>Board</span>
                                 </div>
                             </div>
                             <div class="summary-content__metrics__row__box summary-content__metrics__row__box__bottom">
                                 <div class="summary-content__metrics__row__box__text">
                                     <span class="metric-number">1</span>
-                                    <span>Tasks In <br>Progress</span>
+                                    <span class="metric-txt">Tasks In <br>Progress</span>
                                 </div>
                             </div>
                             <div class="summary-content__metrics__row__box summary-content__metrics__row__box__bottom">
                                 <div class="summary-content__metrics__row__box__text">
                                     <span class="metric-number">1</span>
-                                    <span>Awaiting <br>Feedback</span>
+                                    <span class="metric-txt">Awaiting <br>Feedback</span>
                                 </div>
                             </div>
             
