add to-do and done hover img

--- a/pages/summary.html
+++ b/pages/summary.html
@@ -65,15 +65,16 @@
                     <div class="summary-content__left">
                         <div class="summary-content__metrics__row">
 
-                            <div class="summary-content__metrics__row__box summary-content__metrics__row__box__top">
-                                <img src="/assets/img/to-do.svg" alt="To-do Image">
+                            <div class="summary-content__metrics__row__box summary-content__metrics__row__box__top summary-content__metrics__row__box__top__img__to-do">
+                                <img class="" src="/assets/img/to-do.svg" alt="To-do Image">
                                 <div class="summary-content__metrics__row__box__text">
                                     <span class="metric-number">1</span>
                                     <span class="metric-txt">To-do</span>
                                 </div>
                             </div>
 
-                            <div class="summary-content__metrics__row__box summary-content__metrics__row__box__top">
+                            <div class="summary-content__metrics__row__box summary-content__metrics__row__box__top
+                            summary-content__metrics__row__box__top__img__done">
                                 <img src="/assets/img/done.png" alt="To-do Image">
                                 <div class="summary-content__metrics__row__box__text">
                                     <span class="metric-number">1</span>
