Add aria-labels for inputs Add closing div summary.html

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             </div>
             <div class="useraccess-form__inputfields">
                 <div class="useraccess-form__inputfield__wrapper">
-                    <input id="email" type="email" placeholder="Email">
+                    <input id="email" type="email" placeholder="Email" aria-label="email" >
                     <img class="useraccess-form__inputfields__icon" src="/assets/img/mail.svg" alt="icon of an email">
                 </div>
                 <div class="useraccess-form__inputfield__wrapper">
-                    <input id="password" type="password" placeholder="Password">
+                    <input id="password" type="password" placeholder="Password" aria-label="password" >
                     <img class="useraccess-form__inputfields__icon" src="/assets/img/lock.svg" alt="icon of a lock">
                 </div>
             </div>
