--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -26,24 +26,24 @@
             </div>
             <div class="useraccess-form__inputfields">
                 <div class="useraccess-form__inputfield__wrapper">
-                    <input id="name" type="text" placeholder="Name">
+                    <input id="name" type="text" placeholder="Name" aria-label="name">
                     <img class="useraccess-form__inputfields__icon" src="../assets/img/person.svg"
                         alt="icon of an person">
                 </div>
                 <div class="useraccess-form__inputfield__wrapper">
-                    <input id="email" type="email" placeholder="Email">
+                    <input id="email" type="email" placeholder="Email" aria-label="email">
                     <img class="useraccess-form__inputfields__icon" src="../assets/img/mail.svg" alt="icon of an email">
                 </div>
                 <div class="useraccess-form__inputfield__wrapper">
-                    <input id="password" type="password" placeholder="Password">
+                    <input id="password" type="password" placeholder="Password" aria-label="password">
                     <img class="useraccess-form__inputfields__icon" src="../assets/img/lock.svg" alt="icon of a lock">
                 </div>
                 <div class="useraccess-form__inputfield__wrapper">
-                    <input id="confirm-password" type="password" placeholder="Confirm Password">
+                    <input id="confirm-password" type="password" placeholder="Confirm Password" aria-label="confirm password">
                     <img class="useraccess-form__inputfields__icon" src="../assets/img/lock.svg" alt="icon of a lock">
                 </div>
                 <p class="useraccess-form__privacy-policy">
-                    <img src="../assets/img/checkbtn-unchecked.svg" class="useraccess-form__privacy-policy__checkbox">
+                    <img src="../assets/img/checkbtn-unchecked.svg" class="useraccess-form__privacy-policy__checkbox" alt="icon of a checkbox">
                     <span class="useraccess-form__privacy-policy__infotext">I accept the
                         <a href="/pages/privacy-policy.html" class="useraccess-form__privacy-policy__link">Privacy
                             Policy</a>
