--- a/pages/add-task.html
+++ b/pages/add-task.html
@@ -62,7 +62,7 @@
                 <div class="task_content__container content-wrapper">
                     <div class="task_content__container__left">
                         <div class="add-task-content-fields">
-                            <label for="title" class="required">Title</label>
+                            <label for="title" class="required required--after">Title</label>
                             <input type="text" placeholder="Enter a title" required>
                         </div>
                         <div class="add-task-content-fields">
@@ -70,7 +70,7 @@
                             <textarea name="Add Task Description" id="task-descrition-area"></textarea>
                         </div>
                         <div class="add-task-content-fields">
-                            <label for="due date" class="required">Due date</label>
+                            <label for="due date" class="required required--after">Due date</label>
                             <input type="date" placeholder="dd/mm/yyyy" required>
                         </div>
                     </div>
@@ -92,7 +92,7 @@
                             </select>
                         </div>
                         <div class="add-task-content-fields">
-                            <label for="category" class="required">Category</label>
+                            <label for="category" class="required required--after">Category</label>
                             <select name="category" id="category" required>
                                 <option value="1">Option1</option>
                                 <option value="2">Option2</option>
@@ -105,7 +105,12 @@
                     </div>
                 </div>
                 
-
+                <div class="task_content__footer content-wrapper">
+                    <span class="required required--before">This field is required</span>
+                    <div class="task_content__footer__buttons">
+                        <div class="task_content__footer__buttons__btn-cancel">Clear</div>
+                        <div class="task_content__footer__buttons__btn-create">Create Task</div>
+                    </div>
 
             </section>
 
