--- a/pages/add-task.html
+++ b/pages/add-task.html
@@ -34,8 +34,8 @@
                     <a href="contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
                 </div>
                 <div class="nav-menu-bottom-button">
-                    <a href="privacy_policy.html">Privacy Policy</a>
-                    <a href="legal_notice.html">Legal notice</a>  
+                    <a href="privacy-policy.html">Privacy Policy</a>
+                    <a href="legal-notice.html">Legal notice</a>  
             </div>
         </nav>
 
