finished privacy policy

--- a/pages/legal-notice.html
+++ b/pages/legal-notice.html
@@ -28,25 +28,28 @@
 
             <nav id="nav-menu">
                 <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
-                    <div>
-                        <a href="summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
-                        <a href="add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
-                        <a href="board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
-                        <a href="contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
-                    </div>
-                    <div class="nav-menu-bottom-button">
-                        <a href="privacy_policy.html">Privacy Policy</a>
-                        <a href="legal_notice.html">Legal notice</a>
-                    </div>
+                <div class="nav-menu__buttons-container">
+                    <a class="nav-button-selected" href="summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
+                    <a href="add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
+                    <a href="board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
+                    <a href="contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
+                </div>
+                <div class="nav-menu-bottom-button">
+                    <a href="privacy-policy.html">Privacy Policy</a>
+                    <a href="legal-notice.html">Legal notice</a>
+                </div>
             </nav>
 
             <div id="legal-page-container" class="content">
                 <header id="header">
                     <div class="header__content content-wrapper">
-                        <span id="header__content__title">Kanban Project Management Tool</span>
-                        <div id="header__content__info">
-                            <img id="help_img" src="../assets/img/help.svg" alt="Help auestion mark">
-                            <img src="#" alt="User picture">
+                        <span id="page-title">Kanban Project Management Tool</span>
+                        <div id="info-container">
+                            <img id="help-img" src="../assets/img/help.svg" alt="Help auestion mark">
+                            <div class="header__content__user-info">
+                                <img src="../assets/img/user-ellipse.svg" alt="User picture">
+                                <span>SM</span>
+                            </div>
                         </div>
                     </div>
                 </header>
