changed centering inside navbar and fixed navbar height

--- a/pages/summary.html
+++ b/pages/summary.html
@@ -13,45 +13,45 @@
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/navigation.css">
     <link rel="stylesheet" href="../styles/board.css">
-    <link rel="stylesheet" href="../styles/add_task.css">
-    <link rel="stylesheet" href="../styles/dialog_add_contact.css">
+    <link rel="stylesheet" href="../styles/add-task.css">
+    <link rel="stylesheet" href="../styles/dialog-add-contact.css">
     <link rel="stylesheet" href="../styles/contacts.css">
     <link rel="stylesheet" href="../styles/summary.css">
-    <link rel="stylesheet" href="../styles/data_privacy.css">
-    <link rel="stylesheet" href="../styles/legal_notes.css">
+    <link rel="stylesheet" href="../styles/data-privacy.css">
+    <link rel="stylesheet" href="../styles/legal-notes.css">
 </head>
 
 <body>
 
     <main>
 
-        <nav id="nav-menu">
-            <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
-            <div class="nav-menu__buttons-container">
-                <a class="nav-button-selected" href="summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
-                <a href="add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
-                <a href="board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
-                <a href="contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
-            </div>
-            <div class="nav-menu-bottom-button">
-                <a href="privacy-policy.html">Privacy Policy</a>
-                <a href="legal-notice.html">Legal notice</a>
-            </div>
-        </nav>
+            <nav id="nav-menu">
+                <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
+                <div class="nav-menu__buttons-container">
+                    <a class="nav-button-selected" href="summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
+                    <a href="add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
+                    <a href="board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
+                    <a href="contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
+                </div>
+                <div class="nav-menu-bottom-button">
+                    <a href="privacy-policy.html">Privacy Policy</a>
+                    <a href="legal-notice.html">Legal notice</a>
+                </div>
+            </nav>
 
         <div id="summary-page-container" class="content">
-            <header id="header">
-                <div class="header__content content-wrapper">
-                    <span id="page-title">Kanban Project Management Tool</span>
-                    <div id="info-container">
-                        <img id="help-img" src="../assets/img/help.svg" alt="Help auestion mark">
-                        <div class="header__content__user-info">
-                            <img src="../assets/img/user-ellipse.svg" alt="User picture">
-                            <span>SM</span>
+                <header id="header">
+                    <div class="header__content content-wrapper">
+                        <span id="page-title">Kanban Project Management Tool</span>
+                        <div id="info-container">
+                            <img id="help-img" src="../assets/img/help.svg" alt="Help auestion mark">
+                            <div class="header__content__user-info">
+                                <img src="../assets/img/user-ellipse.svg" alt="User picture">
+                                <span>SM</span>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </header>
+                </header>
 
 
             <section id="summary-content">
@@ -134,27 +134,27 @@
         </div>
     </main>
 
-    <script src="./script.js"></script>
-    <script src="./scripts/login.js"></script>
-    <script src="./scripts/main.js"></script>
-    <script src="./scripts/navigation.js"></script>
+    <script src="../script.js"></script>
+    <script src="../scripts/login.js"></script>
+    <script src="../scripts/main.js"></script>
+    <script src="../scripts/navigation.js"></script>
 
-    <script src="./scripts/board.js"></script>
-    <script src="./scripts/drag_and_drop.js"></script>
-    <script src="./scripts/ticket.js"></script>
+    <script src="../scripts/board.js"></script>
+    <script src="../scripts/drag_and_drop.js"></script>
+    <script src="../scripts/ticket.js"></script>
 
-    <script src="./scripts/add_task.js"></script>
-    <script src="./scripts/dialog_add_contact.js"></script>
-    <script src="./scripts/contacts.js"></script>
-    <script src="./scripts/greetings.js"></script>
-    <script src="./scripts/summary.js"></script>
+    <script src="../scripts/add_task.js"></script>
+    <script src="../scripts/dialog_add_contact.js"></script>
+    <script src="../scripts/contacts.js"></script>
+    <script src="../scripts/greetings.js"></script>
+    <script src="../scripts/summary.js"></script>
 
-    <script src="./templates/tpl_login.js"></script>
-    <script src="./templates/tpl_ticket.js"></script>
-    <script src="./templates/tpl_navigation.js"></script>
-    <script src="./templates/tpl_board.js"></script>
-    <script src="./templates/tpl_add_task.js"></script>
-    <script src="./templates/tpl_summary.js"></script>
+    <script src="../templates/tpl_login.js"></script>
+    <script src="../templates/tpl_ticket.js"></script>
+    <script src="../templates/tpl_navigation.js"></script>
+    <script src="../templates/tpl_board.js"></script>
+    <script src="../templates/tpl_add_task.js"></script>
+    <script src="../templates/tpl_summary.js"></script>
 
 </body>
 
