--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -8,18 +8,18 @@
         <title>Kanban Board</title>
         <link rel="icon" href="../assets/img/logo-black.png" type="image/x-icon">
 
-        <link rel="stylesheet" href="/style.css">
-        <link rel="stylesheet" href="/styles/login.css">
+        <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="../styles/login.css">
 
-        <link rel="stylesheet" href="/styles/header.css">
-        <link rel="stylesheet" href="/styles/navigation.css">
-        <link rel="stylesheet" href="/styles/board.css">
-        <link rel="stylesheet" href="/styles/add-task.css">
-        <link rel="stylesheet" href="/styles/dialog-add-contact.css">
-        <link rel="stylesheet" href="/styles/contacts.css">
-        <link rel="stylesheet" href="/styles/summary.css">
-        <link rel="stylesheet" href="/styles/data-privacy.css">
-        <link rel="stylesheet" href="/styles/legal-notes.css">
+        <link rel="stylesheet" href="../styles/header.css">
+        <link rel="stylesheet" href="../styles/navigation.css">
+        <link rel="stylesheet" href="../styles/board.css">
+        <link rel="stylesheet" href="../styles/add-task.css">
+        <link rel="stylesheet" href="../styles/dialog-add-contact.css">
+        <link rel="stylesheet" href="../styles/contacts.css">
+        <link rel="stylesheet" href="../styles/summary.css">
+        <link rel="stylesheet" href="../styles/data-privacy.css">
+        <link rel="stylesheet" href="../styles/legal-notes.css">
     </head>
 
     <body>
@@ -84,27 +84,27 @@
             </div>
         </main>
 
-        <script src="/script.js"></script>
-        <script src="/scripts/login.js"></script>
-        <script src="/scripts/main.js"></script>
-        <script src="/scripts/navigation.js"></script>
+        <script src="../script.js"></script>
+        <script src="../scripts/login.js"></script>
+        <script src="../scripts/main.js"></script>
+        <script src="../scripts/navigation.js"></script>
 
-        <script src="/scripts/board.js"></script>
-        <script src="/scripts/drag_and_drop.js"></script>
-        <script src="/scripts/ticket.js"></script>
+        <script src="../scripts/board.js"></script>
+        <script src="../scripts/drag_and_drop.js"></script>
+        <script src="../scripts/ticket.js"></script>
 
-        <script src="/scripts/add_task.js"></script>
-        <script src="/scripts/dialog_add_contact.js"></script>
-        <script src="/scripts/contacts.js"></script>
-        <script src="/scripts/greetings.js"></script>
-        <script src="/scripts/summary.js"></script>
+        <script src="../scripts/add_task.js"></script>
+        <script src="../scripts/dialog_add_contact.js"></script>
+        <script src="../scripts/contacts.js"></script>
+        <script src="../scripts/greetings.js"></script>
+        <script src="../scripts/summary.js"></script>
 
-        <script src="/templates/tpl_login.js"></script>
-        <script src="/templates/tpl_ticket.js"></script>
-        <script src="/templates/tpl_navigation.js"></script>
-        <script src="/templates/tpl_board.js"></script>
-        <script src="/templates/tpl_add_task.js"></script>
-        <script src="/templates/tpl_summary.js"></script>
+        <script src="../templates/tpl_login.js"></script>
+        <script src="../templates/tpl_ticket.js"></script>
+        <script src="../templates/tpl_navigation.js"></script>
+        <script src="../templates/tpl_board.js"></script>
+        <script src="../templates/tpl_add_task.js"></script>
+        <script src="../templates/tpl_summary.js"></script>
     </body>
 
 </html>
