--- a/pages/add-task.html
+++ b/pages/add-task.html
@@ -22,27 +22,26 @@
 </head>
 
     <body>
-
-        <main>
-
-        <nav id="nav-menu">
-            <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
-                <div class="nav-menu__buttons-container">
-                    <a href="summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
-                    <a class="nav-button-selected" href="add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
+<nav id="nav-menu" class="nav-menu">
+                <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
+                <div class="nav-menu__buttons--container">
+                    <a class="nav-button__selected" href="summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
+                    <a href="add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
                     <a href="board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
                     <a href="contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
                 </div>
-                <div class="nav-menu-bottom-button">
+                <div class="nav-menu__bottom--button">
                     <a href="privacy-policy.html">Privacy Policy</a>
-                    <a href="legal-notice.html">Legal notice</a>  
-            </div>
-        </nav>
+                    <a href="legal-notice.html">Legal notice</a>
+                </div>
+            </nav>
+        <main>
 
+        
         <div id="summary-page-container" class="content">
             <header id="header">
                 <div class="header__content content-wrapper">
-                    <span id="page-title">Kanban Project Management Tool</span>
+                    <h1 id="page-title">Kanban Project Management Tool</h1>
                     <div id="info-container">
                         <img id="help-img" src="../assets/img/help.svg" alt="Help auestion mark">
                         <div class="header__content__user-info">
@@ -57,7 +56,7 @@
             
             <section id="task-content">
                 <div class="task_content__header content-wrapper">
-                    <h1>Add Task</h1>
+                    <h2>Add Task</h2>
                 </div>
                 <div class="task_content__container content-wrapper">
                     <div class="task_content__container__left">
