--- a/pages/summary.html
+++ b/pages/summary.html
@@ -22,10 +22,7 @@
 </head>
 
 <body>
-
-    <main>
-
-            <nav id="nav-menu" class="nav-menu">
+<nav id="nav-menu" class="nav-menu">
                 <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
                 <div class="nav-menu__buttons--container">
                     <a class="nav-button__selected" href="summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
@@ -38,11 +35,14 @@
                     <a href="legal-notice.html">Legal notice</a>
                 </div>
             </nav>
+    <main>
+
+            
 
         <div id="summary-page-container" class="content">
                 <header id="header">
                     <div class="header__content content-wrapper">
-                        <span id="page-title">Kanban Project Management Tool</span>
+                        <h1 id="page-title">Kanban Project Management Tool</h1>
                         <div id="info-container" class="info-container">
                             <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
                             <div class="header__content--user-info">
@@ -56,7 +56,7 @@
 
             <section id="summary-content">
                 <div class="summary-content__header content-wrapper">
-                    <h1>Join 360</h1>
+                    <h2>Join 360</h2>
                     <div class="blue_seperator"></div>
                     <span>Key Metrics at a Glance</span>
                 </div>
