--- a/pages/help.html
+++ b/pages/help.html
@@ -24,30 +24,30 @@
     </head>
 
     <body>
-      
-        <main>
+        <nav id="nav-menu" class="nav-menu">
+            <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
+            <div class="nav-menu__buttons--container">
+                <a class="nav-button__selected" href="summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
+                <a href="add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
+                <a href="board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
+                <a href="contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
+            </div>
+            <div class="nav-menu__bottom--button">
+                <a href="privacy-policy.html">Privacy Policy</a>
+                <a href="legal-notice.html">Legal notice</a>
+            </div>
+        </nav>
 
-            <nav id="nav-menu">
-                <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
-                <div class="nav-menu__buttons-container">
-                    <a class="nav-button-selected" href="summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
-                    <a href="add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
-                    <a href="board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
-                    <a href="contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
-                </div>
-                <div class="nav-menu-bottom-button">
-                    <a href="privacy-policy.html">Privacy Policy</a>
-                    <a href="legal-notice.html">Legal notice</a>
-                </div>
-            </nav>
+
+        <main>
 
             <div id="help-page-container" class="content">
                 <header id="header">
                     <div class="header__content content-wrapper">
-                        <span id="page-title">Kanban Project Management Tool</span>
-                        <div id="info-container">
-                            <img id="help-img" src="../assets/img/help.svg" alt="Help question mark">
-                            <div class="header__content__user-info">
+                        <h1 id="page-title">Kanban Project Management Tool</h1>
+                        <div id="info-container" class="info-container">
+                            <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
+                            <div class="header__content--user-info">
                                 <img src="../assets/img/user-ellipse.svg" alt="User picture">
                                 <span>SM</span>
                             </div>
@@ -55,15 +55,15 @@
                     </div>
                 </header>
 
-                <section id="help-content" class="content-wrapper">
-                <h1>Help</h1>
+                <section id="help-content" class="help-content content-wrapper">
+                <h2>Help</h2>
 
                 <p>
                     Welcome to the help page for <strong>Join</strong>, your guide to using our kanban project management tool. 
                     Here, we'll provide an overview of what Join is, how it can benefit you, and how to use it.
                 </p>
 
-                <h2>What is Join?</h2>
+                <h3>What is Join?</h3>
                 <p>
                     Join is a kanban-based project management tool designed and built by a group of dedicated students as part 
                     of their web development bootcamp at the <strong>Developer Akademie</strong>.
@@ -81,13 +81,13 @@
                     reliability, accuracy, or other aspects of quality regarding Join.
                 </p>
 
-                <h2>How to use it</h2>
+                <h3>How to use it</h3>
                 <p>Here is a step-by-step guide on how to use Join:</p>
 
                 <ol>
                     <li>
                     <div class="list-content">
-                        <h3>Exploring the Board</h3>
+                        <h4>Exploring the Board</h4>
                         <p>
                         When you log in to Join, you'll find a default board. This board represents your project and contains four default lists: 
                         <strong>"To Do"</strong>, <strong>"In Progress"</strong>, <strong>"Await feedback"</strong> and <strong>"Done"</strong>.
@@ -97,7 +97,7 @@
 
                     <li>
                     <div class="list-content">
-                        <h3>Creating Contacts</h3>
+                        <h4>Creating Contacts</h4>
                         <p>
                         In Join, you can add contacts to collaborate on your projects. Go to the <strong>Contacts</strong> section, 
                         click on <strong>"New Contact"</strong>, and fill in the required information. Once added, these contacts can be assigned tasks 
@@ -108,7 +108,7 @@
 
                     <li>
                     <div class="list-content">
-                        <h3>Adding Cards</h3>
+                        <h4>Adding Cards</h4>
                         <p>
                         Now that you've added your contacts, you can start adding cards. Cards represent individual tasks. 
                         Click the <strong>"+"</strong> button under the appropriate list to create a new card. 
@@ -119,7 +119,7 @@
 
                     <li>
                     <div class="list-content">
-                        <h3>Moving Cards</h3>
+                        <h4>Moving Cards</h4>
                         <p>
                         As the task moves from one stage to another, you can reflect that on the board by <strong>dragging and dropping</strong> the card 
                         from one list to another.
@@ -129,7 +129,7 @@
 
                     <li>
                     <div class="list-content">
-                        <h3>Deleting Cards</h3>
+                        <h4>Deleting Cards</h4>
                         <p>
                         Once a task is completed, you can either move it to the "Done" list or delete it. 
                         Deleting a card will <strong>permanently remove</strong> it from the board. 
@@ -149,7 +149,7 @@
                     We're here to help you!
                 </p>
 
-                <h2>Enjoy using Join!</h2>
+                <h3>Enjoy using Join!</h3>
                 </section>
             </div>
         </main>
