--- a/pages/legal-notice.html
+++ b/pages/legal-notice.html
@@ -19,34 +19,34 @@
         <link rel="stylesheet" href="../styles/contacts.css">
         <link rel="stylesheet" href="../styles/summary.css">
         <link rel="stylesheet" href="../styles/data-privacy.css">
-        <link rel="stylesheet" href="../styles/legal-notes.css">
+        <link rel="stylesheet" href="../styles/legal-notice.css">
     </head>
 
     <body>
+
+        <nav id="nav-menu" class="nav-menu">
+            <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
+            <div class="nav-menu__buttons--container">
+                <a class="nav-button__selected" href="summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
+                <a href="add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
+                <a href="board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
+                <a href="contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
+            </div>
+            <div class="nav-menu__bottom--button">
+                <a href="privacy-policy.html">Privacy Policy</a>
+                <a href="legal-notice.html">Legal notice</a>
+            </div>
+        </nav>
       
         <main>
-
-            <nav id="nav-menu">
-                <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
-                <div class="nav-menu__buttons-container">
-                    <a class="nav-button-selected" href="summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
-                    <a href="add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
-                    <a href="board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
-                    <a href="contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
-                </div>
-                <div class="nav-menu-bottom-button">
-                    <a href="privacy-policy.html">Privacy Policy</a>
-                    <a href="legal-notice.html">Legal notice</a>
-                </div>
-            </nav>
 
             <div id="legal-page-container" class="content">
                 <header id="header">
                     <div class="header__content content-wrapper">
-                        <span id="page-title">Kanban Project Management Tool</span>
-                        <div id="info-container">
-                            <img id="help-img" src="../assets/img/help.svg" alt="Help auestion mark">
-                            <div class="header__content__user-info">
+                        <h1 id="page-title">Kanban Project Management Tool</h1>
+                        <div id="info-container" class="info-container">
+                            <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
+                            <div class="header__content--user-info">
                                 <img src="../assets/img/user-ellipse.svg" alt="User picture">
                                 <span>SM</span>
                             </div>
@@ -54,23 +54,23 @@
                     </div>
                 </header>
 
-                <section id="legal-content" class="content-wrapper">
-                    <h1>Legal Notice</h1>
+                <section id="legal-content" class="legal-content content-wrapper">
+                    <h2>Legal Notice</h2>
                     <div>
-                        <h2>Imprint</h2><br>
+                        <h3>Imprint</h3><br>
                         <p><strong>Student Names:</strong> Sascha Keßler, Sebastian Hedwig, Marvin Lenhart</p>
                         <p><strong>Address:</strong> Sebastian Hedwig</p>
                         <p><strong>Postcode and City:</strong> 65439 Flörsheim am Main</p>
                         <p><strong>Email:</strong> <a href="mailto: sebastian.hedwig@web.de">sebastian.hedwig@web.de</a></p>
                         <br><br>
-                        <h3>Acceptance of Terms</h3>
+                        <h4>Acceptance of Terms</h4>
                         <p>
                             By accessing and using Join (Product), you acknowledge and agree to the following terms and conditions,
                             and any policies, guidelines, or amendments thereto that may be presented to you from time to time.
                             We, the listed students, may update or change the terms and conditions from time to time without notice.
                         </p>
                         <br><br>
-                        <h3>Scope and Ownership of the Product</h3>
+                        <h4>Scope and Ownership of the Product</h4>
                         <p>
                             Join has been developed as part of a student group project in a web development bootcamp at the Developer Akademie GmbH.
                             It has an educational purpose and is not intended for extensive personal &amp; business usage.
@@ -83,20 +83,20 @@
                         </p>
                         <br><br>
 
-                        <h3>Proprietary Rights</h3>
+                        <h4>Proprietary Rights</h4>
                         <p>
                             Aside from the design owned by Developer Akademie GmbH, we, the listed students, retain all proprietary
                             rights in Join, including any associated copyrighted material, trademarks, and other proprietary information.
                         </p>
                         <br><br>
-                        <h3>Use of the Product</h3>
+                        <h4>Use of the Product</h4>
                         <p>
                             Join is intended to be used for lawful purposes only, in accordance with all applicable laws and regulations.
                             Any use of Join for illegal activities, or to harass, harm, threaten, or intimidate another person, is strictly prohibited.
                             You are solely responsible for your interactions with other users of Join.
                         </p>
                         <br><br>
-                        <h3>Disclaimer of Warranties and Limitation of Liability</h3>
+                        <h4>Disclaimer of Warranties and Limitation of Liability</h4>
                         <p>
                             Join is provided "as is" without warranty of any kind, whether express or implied, including but not limited to the implied warranties
                             of merchantability, fitness for a particular purpose, and non-infringement. In no event will we, the listed students,
@@ -105,7 +105,7 @@
                             even if we have been advised of the possibility of such damages, arising out of or in connection with the use or performance of Join.
                         </p>
                         <br><br>
-                        <h3>Indemnity</h3>
+                        <h4>Indemnity</h4>
                         <p>
                             You agree to indemnify, defend and hold harmless us, the listed students, the Developer Akademie, and our
                             affiliates, partners, officers, directors, agents, and employees, from and against any claim, demand, loss,
