hover effects for create task and clear button in add task html

--- a/pages/add-task.html
+++ b/pages/add-task.html
@@ -12,12 +12,8 @@
 
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/navigation.css">
-    <link rel="stylesheet" href="../styles/board.css">
     <link rel="stylesheet" href="../styles/add-task.css">
-    <link rel="stylesheet" href="../styles/dialog_add_contact.css">
-    <link rel="stylesheet" href="../styles/contacts.css">
-    <link rel="stylesheet" href="../styles/data_privacy.css">
-    <link rel="stylesheet" href="../styles/legal_notes.css">
+   
 </head>
 
     <body>
@@ -106,8 +102,10 @@
                 <div class="task-content__footer content-wrapper">
                     <span class="required required--before">This field is required</span>
                     <div class="task-content__footer-buttons">
-                        <div class="task-content__footer-button--cancel">Clear</div>
-                        <div class="task-content__footer-button--create">Create Task</div>
+                        <div class="task-content__footer-button--cancel">Clear 
+                            <img src="../assets/img/close.svg" alt="close icon">
+                        </div>
+                        <div class="task-content__footer-button--create">Create Task <img src="../assets/img/done.svg" alt="done icon"></div>
                     </div>
 
             </section>
