corrected links in navigation on the sides, changed classname. deleted links to not used JS and CSS files inside html files

--- a/pages/legal-notice.html
+++ b/pages/legal-notice.html
@@ -22,14 +22,14 @@
         <nav id="nav-menu" class="nav-menu">
             <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
             <div class="nav-menu__buttons--container">
-                <a class="nav-button__selected" href="summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
-                <a href="add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
-                <a href="board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
-                <a href="contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
+                <a href="./summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
+                <a href="./add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
+                <a href="./board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
+                <a href="./contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
             </div>
-            <div class="nav-menu__bottom--button">
-                <a href="privacy-policy.html">Privacy Policy</a>
-                <a href="legal-notice.html">Legal notice</a>
+            <div class="nav-menu__bottom__buttons">
+                <a href="./privacy-policy.html">Privacy Policy</a>
+                <a class="nav-button--selected" href="./legal-notice.html">Legal Notice</a>
             </div>
         </nav>
       
