--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -23,34 +23,39 @@
     </head>
 
     <body>
-
-        <header id="header">
-            <span id="page_title">Kanban Project Management Tool</span>
-            <div id="info_container">
-                <img id="help_img" src="/img/help.svg" alt="Help auestion mark">
-                <img src="#" alt="User picture">
+        <nav id="nav-menu" class="nav-menu">
+            <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
+            <div class="nav-menu__buttons--container">
+                <a href="./summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
+                <a href="add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
+                <a href="board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
+                <a class="nav-button--selected" href="contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
             </div>
-        </header>
-        
-        </header>
+            <div class="nav-menu__bottom__buttons">
+                <a href="privacy-policy.html">Privacy Policy</a>
+                <a href="legal-notice.html">Legal Notice</a>
+            </div>
+        </nav>
 
-        <main id="contacts_page_container">
-
-            <nav id="nav_menu">
-                <img id="logo" src="/img/logo-white.png" alt="Join Logo">
-                    <div>
-                        <a href="summary.html"><img src="/img/summary.svg" alt="Summary">Summary</a>
-                        <a href="add_task.html"><img src="/img/add-task.svg" alt="Add Task">Add Task</a>
-                        <a href="board.html"><img src="/img/board.svg" alt="Board">Board</a>
-                        <a href="contacts.html"><img src="/img/contacts.svg" alt="Contacts">Contacts</a>
+        <main>
+            <div id="contacts_page_container" class="content">
+                <header id="header">
+                    <div class="header__content content-wrapper">
+                        <h1 id="page-title">Kanban Project Management Tool</h1>
+                        <div id="info-container" class="info-container">
+                            <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
+                            <div class="header__content--user-info">
+                                <img src="../assets/img/user-ellipse.svg" alt="User picture">
+                                <span>SM</span>
+                            </div>
+                        </div>
                     </div>
-                    <div class="nav-menu-bottom-button">
-                        <a href="privacy_policy.html">Privacy Policy</a>
-                        <a href="legal_notice.html">Legal notice</a>
-                    </div>
-            </nav>
-            <section id="contacts_content"></section>
+                </header>
 
+                <section id="contacts_content">
+
+                </section>
+            </div>
         </main>
 
         <script src="./script.js"></script>
