--- a/pages/help.html
+++ b/pages/help.html
@@ -21,14 +21,14 @@
         <nav id="nav-menu" class="nav-menu">
             <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
             <div class="nav-menu__buttons--container">
-                <a class="nav-button__selected" href="summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
-                <a href="add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
-                <a href="board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
-                <a href="contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
+                <a href="./summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
+                <a href="./add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
+                <a href="./board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
+                <a href="./contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
             </div>
-            <div class="nav-menu__bottom--button">
-                <a href="privacy-policy.html">Privacy Policy</a>
-                <a href="legal-notice.html">Legal notice</a>
+            <div class="nav-menu__bottom__buttons">
+                <a href="./privacy-policy.html">Privacy Policy</a>
+                <a href="./legal-notice.html">Legal Notice</a>
             </div>
         </nav>
 
@@ -38,7 +38,6 @@
                     <div class="header__content content-wrapper">
                         <h1 id="page-title">Kanban Project Management Tool</h1>
                         <div id="info-container" class="info-container">
-                            <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
                             <div class="header__content--user-info">
                                 <img src="../assets/img/user-ellipse.svg" alt="User picture">
                                 <span>SM</span>
