--- a/pages/summary.html
+++ b/pages/summary.html
@@ -9,152 +9,125 @@
     <link rel="icon" href="../assets/img/logo-black.png" type="image/x-icon">
 
     <link rel="stylesheet" href="../style.css">
-
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/navigation.css">
-    <link rel="stylesheet" href="../styles/board.css">
-    <link rel="stylesheet" href="../styles/dialog-add-contact.css">
-    <link rel="stylesheet" href="../styles/contacts.css">
     <link rel="stylesheet" href="../styles/summary.css">
-    <link rel="stylesheet" href="../styles/data-privacy.css">
-    <link rel="stylesheet" href="../styles/legal-notes.css">
+
+    <script src="../script.js">defer</script>
+    <script src="../scripts/main.js">defer</script>
+    <script src="../scripts/navigation.js">defer</script>
+    <script src="../scripts/summary.js">defer</script>
+    <script src="../templates/tpl_summary.js">defer</script>
 </head>
 
-<body>
-    <nav id="nav-menu" class="nav-menu">
-        <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
-        <div class="nav-menu__buttons--container">
-            <a class="nav-button__selected" href="summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
-            <a href="add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
-            <a href="board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
-            <a href="contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
-        </div>
-        <div class="nav-menu__bottom--button">
-            <a href="privacy-policy.html">Privacy Policy</a>
-            <a href="legal-notice.html">Legal notice</a>
-        </div>
-    </nav>
-    <main>
-
-            
-
-        <div id="summary-page-container" class="content">
-                <header id="header">
-                    <div class="header__content content-wrapper">
-                        <h1 id="page-title">Kanban Project Management Tool</h1>
-                        <div id="info-container" class="info-container">
-                            <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
-                            <div class="header__content--user-info">
-                                <img src="../assets/img/user-ellipse.svg" alt="User picture">
-                                <span>SM</span>
+    <body>
+        <nav id="nav-menu" class="nav-menu">
+            <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
+            <div class="nav-menu__buttons--container">
+                <a class="nav-button--selected" href="./summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
+                <a href="./add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
+                <a href="./board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
+                <a href="./contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
+            </div>
+            <div class="nav-menu__bottom__buttons">
+                <a href="./privacy-policy.html">Privacy Policy</a>
+                <a href="./legal-notice.html">Legal Notice</a>
+            </div>
+        </nav>
+        <main>
+            <div id="summary-page-container" class="content">
+                    <header id="header">
+                        <div class="header__content content-wrapper">
+                            <h1 id="page-title">Kanban Project Management Tool</h1>
+                            <div id="info-container" class="info-container">
+                                <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
+                                <div class="header__content--user-info">
+                                    <img src="../assets/img/user-ellipse.svg" alt="User picture">
+                                    <span>SM</span>
+                                </div>
                             </div>
                         </div>
+                    </header>
+
+                <section id="summary-content">
+                    <div class="summary-content__header content-wrapper">
+                        <h2>Join 360</h2>
+                        <div class="blue_seperator"></div>
+                        <span>Key Metrics at a Glance</span>
                     </div>
-                </header>
+                    <!--Summary Content will be loaded here dynamically-->
+                    <div class="summary-content__metrics content-wrapper">
+                        <div class="summary-content__left">
+                            <div class="summary-content__metrics--row">
 
-
-            <section id="summary-content">
-                <div class="summary-content__header content-wrapper">
-                    <h2>Join 360</h2>
-                    <div class="blue_seperator"></div>
-                    <span>Key Metrics at a Glance</span>
-                </div>
-                <!--Summary Content will be loaded here dynamically-->
-                <div class="summary-content__metrics content-wrapper">
-                    <div class="summary-content__left">
-                        <div class="summary-content__metrics--row">
-
-                            <div
-                                class="metrics__box metrics__box--top metrics__icon--todo">
-                                <img class="" src="../assets/img/to-do.svg" alt="To-do Image">
-                                <div class="metrics__box--text">
-                                    <span class="metric-number">1</span>
-                                    <span class="metric-txt">To-do</span>
-                                </div>
-                            </div>
-
-                            <div class="metrics__box metrics__box--top
-                            metrics__icon--done">
-                                <img src="../assets/img/done.png" alt="To-do Image">
-                                <div class="metrics__box--text">
-                                    <span class="metric-number">1</span>
-                                    <span class="metric-txt">Done</span>
-                                </div>
-                            </div>
-
-                        </div>
-
-                        <div class="summary-content__metrics--row">
-
-                            <div class="metrics__box metrics__box--middle">
-                                <div class="metrics__box--left">
-                                    <img src="../assets/img/urgent-summary.png" alt="To-do Image">
+                                <div
+                                    class="metrics__box metrics__box--top metrics__icon--todo">
+                                    <img class="" src="../assets/img/to-do.svg" alt="To-do Image">
                                     <div class="metrics__box--text">
                                         <span class="metric-number">1</span>
-                                        <span class="metric-txt-middle">Urgent</span>
+                                        <span class="metric-txt">To-do</span>
                                     </div>
                                 </div>
-                                <div class="grey_seperator"></div>
-                                <div class="metrics__box--text">
-                                    <span>Date</span>
-                                    <span>Upcoming Deadline</span>
+
+                                <div class="metrics__box metrics__box--top
+                                metrics__icon--done">
+                                    <img src="../assets/img/done.png" alt="To-do Image">
+                                    <div class="metrics__box--text">
+                                        <span class="metric-number">1</span>
+                                        <span class="metric-txt">Done</span>
+                                    </div>
                                 </div>
+
+                            </div>
+
+                            <div class="summary-content__metrics--row">
+
+                                <div class="metrics__box metrics__box--middle">
+                                    <div class="metrics__box--left">
+                                        <img src="../assets/img/urgent-summary.png" alt="To-do Image">
+                                        <div class="metrics__box--text">
+                                            <span class="metric-number">1</span>
+                                            <span class="metric-txt-middle">Urgent</span>
+                                        </div>
+                                    </div>
+                                    <div class="grey_seperator"></div>
+                                    <div class="metrics__box--text">
+                                        <span>Date</span>
+                                        <span>Upcoming Deadline</span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="summary-content__metrics--row">
+                                <div class="metrics__box metrics__box--bottom">
+                                    <div class="metrics__box--text">
+                                        <span class="metric-number">1</span>
+                                        <span class="metric-txt">Tasks In <br>Board</span>
+                                    </div>
+                                </div>
+                                <div class="metrics__box metrics__box--bottom">
+                                    <div class="metrics__box--text">
+                                        <span class="metric-number">1</span>
+                                        <span class="metric-txt">Tasks In <br>Progress</span>
+                                    </div>
+                                </div>
+                                <div class="metrics__box metrics__box--bottom">
+                                    <div class="metrics__box--text">
+                                        <span class="metric-number">1</span>
+                                        <span class="metric-txt">Awaiting <br>Feedback</span>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
-
-                        <div class="summary-content__metrics--row">
-                            <div class="metrics__box metrics__box--bottom">
-                                <div class="metrics__box--text">
-                                    <span class="metric-number">1</span>
-                                    <span class="metric-txt">Tasks In <br>Board</span>
-                                </div>
-                            </div>
-                            <div class="metrics__box metrics__box--bottom">
-                                <div class="metrics__box--text">
-                                    <span class="metric-number">1</span>
-                                    <span class="metric-txt">Tasks In <br>Progress</span>
-                                </div>
-                            </div>
-                            <div class="metrics__box metrics__box--bottom">
-                                <div class="metrics__box--text">
-                                    <span class="metric-number">1</span>
-                                    <span class="metric-txt">Awaiting <br>Feedback</span>
-                                </div>
-                            </div>
-
+                        <div class="summary-content__right">
+                            <h4>Good morning!</h4>
+                            <span>Hier Name (nur wenn Eingeloggt, sonst leer)</span> <!--Soll je nach Tageszeit wechseln-->
                         </div>
-                    </div>
-                    <div class="summary-content__right">
-                        <h4>Good morning!</h4>
-                        <span>Hier Name (nur wenn Eingeloggt, sonst leer)</span> <!--Soll je nach Tageszeit wechseln-->
-                    </div>
-                </div>    
-            </section>
-        </div>
-    </main>
-
-    <script src="../script.js"></script>
-    <script src="../scripts/login.js"></script>
-    <script src="../scripts/main.js"></script>
-    <script src="../scripts/navigation.js"></script>
-
-    <script src="../scripts/board.js"></script>
-    <script src="../scripts/drag_and_drop.js"></script>
-    <script src="../scripts/ticket.js"></script>
-
-    <script src="../scripts/add_task.js"></script>
-    <script src="../scripts/dialog_add_contact.js"></script>
-    <script src="../scripts/contacts.js"></script>
-    <script src="../scripts/greetings.js"></script>
-    <script src="../scripts/summary.js"></script>
-
-    <script src="../templates/tpl_login.js"></script>
-    <script src="../templates/tpl_ticket.js"></script>
-    <script src="../templates/tpl_navigation.js"></script>
-    <script src="../templates/tpl_board.js"></script>
-    <script src="../templates/tpl_add_task.js"></script>
-    <script src="../templates/tpl_summary.js"></script>
-
-</body>
+                    </div>    
+                </section>
+            </div>
+        </main>
+    </body>
 
 </html>
