--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -44,7 +44,7 @@
                         <h1 id="page-title">Kanban Project Management Tool</h1>
                         <div id="info-container" class="info-container">
                             <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
-                            <div class="header__content--user-info">
+                            <div class="header__user-info">
                                 <img src="../assets/img/user-ellipse.svg" alt="User picture">
                                 <span>SM</span>
                             </div>
