--- a/pages/board.html
+++ b/pages/board.html
@@ -30,13 +30,13 @@
 
         <nav id="nav-menu" class="nav-menu">
             <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
-            <div class="nav-menu__buttons--container">
+            <div class="nav-menu__btn-container">
                 <a href="./summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
                 <a href="./add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
-                <a class="nav-button--selected deactivated" href="./board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
+                <a class="nav-btn--selected deactivated" href="./board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
                 <a href="./contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
             </div>
-            <div class="nav-menu__bottom__buttons">
+            <div class="nav-menu__bottom__btn">
                 <a href="./privacy-policy.html">Privacy Policy</a>
                 <a href="./legal-notice.html">Legal Notice</a>
             </div>
